--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ===============================
-# = DATA SOURCE
+# = DATA SOURCE PRIMARY
 # ===============================
 datasource.primary.url = jdbc:mysql://localhost:3306/demo
 datasource.primary.username = root
@@ -7,7 +7,9 @@ datasource.primary.password = root
 datasource.primary.testWhileIdle = true
 datasource.primary.validationQuery = SELECT 1
 
-
+# ===============================
+# = DATA SOURCE SECONDARY
+# ===============================
 datasource.secondary.url = jdbc:mysql://localhost:3306/recivedemo
 datasource.secondary.username = root
 datasource.secondary.password = root
